--- a/.settings/tasks.json
+++ b/.settings/tasks.json
@@ -9,23 +9,10 @@
 // A task runner that calls the Typescipt compiler (tsc) and 
 // Compiles a HelloWorld.ts program
 {
-	"version": "0.1.0",
-	
-	// The command is tsc. Assumes that tsc has been installed using npm install -g typescript
-	"command": "python",
-	
-	// The command is a shell script
-	"isShellCommand": true,
-
-	// Show the output window only if unrecognized errors occur. 
-	//"showOutput": "silent",
-	
-	// args is the HelloWorld program to compile.
-	"args": ["main.py"],
-	
-	// use the standard tsc problem matcher to find compile problems
-	// in the output.
-	    "problemMatcher": {
+    "version": "0.1.0",
+    "command": "c:\\Python34\\python",
+    "args": ["main.py"],
+    "problemMatcher": {
         "fileLocation": ["relative", "${workspaceRoot}"],
         "pattern": {
             "regexp": "^(.*)+s$",
